test/errors/stmt_async_for.py
def f(it):
    async for x in it:
        pass
