test/errors/stmt_async_for.py.expected
test/errors/stmt_async_for.py:2 error: `async for` outside async function
